// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders app 1`] = `
<h2
  data-testid="tab-content"
>
  Artists content
</h2>
`;

exports[`<App /> selects second tab 1`] = `
<h2
  data-testid="tab-content"
>
  Books content
</h2>
`;
